--- a/client/src/index.css
+++ b/client/src/index.css
@@ -277,3 +277,18 @@ label:hover {
 .masonry-item:hover {
 	filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.3));
 }
+
+/* button */
+button {
+	border-radius: 0.75rem;
+	background-color: red;
+	color: white;
+	display: inline;
+}
+.btn_content {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	height: 2rem;
+}
