--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,13 @@
-@import url("https://fonts.googleapis.com/css2?family=Fuggles&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Otomanopee+One&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Fuggles&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Otomanopee+One&display=swap');
 
 :root {
 	--color-dark: #170041;
 	--color-primary: #9000ff;
 	--color-light: #4ca1a3;
 	--color-background: #ffffff;
-	--heading: "Otomanopee One", sans-serif;
+	--heading: 'Otomanopee One', sans-serif;
 }
 * {
 	box-sizing: border-box;
@@ -15,8 +15,8 @@
 
 body {
 	margin: 0;
-	font-family: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
-		"Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+	font-family: 'Lato', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+		'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
 		sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
@@ -25,7 +25,7 @@ body {
 }
 
 code {
-	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
 		monospace;
 }
 
@@ -49,46 +49,47 @@ a {
 	text-align: center;
 }
 
-.header {
-	padding: 1rem 0;
-	text-align: center;
-}
-
 .button {
 	padding: 0.75rem 1.5rem;
 	border-radius: 5rem;
 	font-weight: bold;
 	font-size: 80%;
 	text-transform: uppercase;
+	transition: all 0.2s ease-in;
+	white-space: nowrap;
+	overflow: hidden;
+}
+
+.button:hover {
+	opacity: 0.8;
 }
 
 .button__primary {
 	background: linear-gradient(var(--color-primary), #7003c4);
 	color: var(--color-background);
-	box-shadow: 2px 2px 12px black;
-}
-.brand {
-	padding: 0 1rem;
-	color: var(--color-primary);
+	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
 }
 
-.brand__name {
-	/* font-family: "Fuggles", cursive; */
-	margin: 0;
-	font-size: 3rem;
-	font-family: var(--heading);
-	font-size: 72px;
-	background: -webkit-linear-gradient(var(--color-primary), var(--color-light));
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
+.header {
+	padding: 1rem 0;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
 
-.brand__tagline {
-	font-family: "Fuggles", cursive;
-	margin: 0;
-	color: var(--color-dark);
-	font-weight: 900;
-	font-size: 2.5rem;
+.brand__name img {
+	width: 12rem;
+}
+
+.nav__item {
+	margin: 0 0.5rem;
+	text-transform: uppercase;
+	font-weight: bold;
+	transition: all 0.2s ease-in;
+}
+
+.nav__item:hover {
+	opacity: 0.8;
 }
 
 .main {
