--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Fuggles&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Otomanopee+One&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Fuggles&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Otomanopee+One&display=swap");
 
 :root {
 	--color-dark: #170041;
 	--color-primary: #9000ff;
 	--color-light: #4ca1a3;
 	--color-background: #ffffff;
-	--heading: 'Otomanopee One', sans-serif;
+	--heading: "Otomanopee One", sans-serif;
 }
 * {
 	box-sizing: border-box;
@@ -15,8 +15,8 @@
 
 body {
 	margin: 0;
-	font-family: 'Lato', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
-		'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+	font-family: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+		"Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
 		sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
@@ -25,7 +25,7 @@ body {
 }
 
 code {
-	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
 		monospace;
 }
 
@@ -176,7 +176,7 @@ label:hover {
 }
 
 /* image grid styles */
-.masonry-wrapper {
+/* .masonry-wrapper {
 	display: flex;
 	justify-content: center;
 }
@@ -231,7 +231,7 @@ label:hover {
 	left: 2.5%;
 	height: 95%;
 	width: 95%;
-}
+} */
 
 /* modal styles */
 .backdrop {
@@ -274,7 +274,7 @@ label:hover {
 
 /* test */
 
-.masonry-wrapper {
+/* .masonry-wrapper {
 	padding: 1.5em;
 	max-width: 960px;
 	margin-right: auto;
@@ -310,4 +310,14 @@ label:hover {
 }
 .masonry-item:hover {
 	filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.3));
+} */
+
+.masonry-wrapper {
+	background-color: green;
+	display: flex;
+	flex-direction: row;
+}
+
+.masonry-item {
+	width: 50%;
 }
