--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,13 @@
-@import url("https://fonts.googleapis.com/css2?family=Fuggles&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Otomanopee+One&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Fuggles&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Otomanopee+One&display=swap');
 
 :root {
 	--color-dark: #170041;
 	--color-primary: #9000ff;
 	--color-light: #4ca1a3;
 	--color-background: #ffffff;
-	--heading: "Otomanopee One", sans-serif;
+	--heading: 'Otomanopee One', sans-serif;
 }
 * {
 	box-sizing: border-box;
@@ -15,8 +15,8 @@
 
 body {
 	margin: 0;
-	font-family: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
-		"Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+	font-family: 'Lato', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+		'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
 		sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
@@ -25,7 +25,7 @@ body {
 }
 
 code {
-	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
 		monospace;
 }
 
@@ -312,12 +312,19 @@ label:hover {
 	filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.3));
 } */
 
-.masonry-wrapper {
+.masonry {
 	background-color: green;
 	display: flex;
 	flex-direction: row;
 }
 
 .masonry-item {
-	width: 50%;
+	width: 100%;
+}
+
+.masonry-content img {
+	min-width: 12rem;
+	width: 100%;
+	height: 16rem;
+	object-fit: contain;
 }
