--- a/client/src/index.css
+++ b/client/src/index.css
@@ -237,15 +237,21 @@ label:hover {
 }
 
 .masonry {
-	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-	gap: 1rem;
-	padding: 3rem 0;
+	column-count: 4;
+	width: 100%;
+	margin: 3rem auto;
 }
 
-@media screen and (max-width: 600px) {
+@media (max-width: 800px) {
 	.masonry {
-		padding: 5rem 0 10rem 0;
+		column-count: 3;
+	}
+}
+
+@media (max-width: 600px) {
+	.masonry {
+		column-count: 2;
+		padding: 0 0 8rem 0;
 	}
 }
 
@@ -254,19 +260,37 @@ label:hover {
 	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
 	transition: all 0.2s ease;
 	border-radius: 10px;
+	position: relative;
+	margin: 0.5rem;
 }
 
+.masonry-item:first-child {
+	margin-top: 0;
+}
 .masonry-item:hover {
-	transform: scale(1.02);
+	transform: scale(1.01);
 }
 
 .masonry-content img {
-	width: 100%;
-	height: 300px;
+	height: auto;
+	max-width: 100%;
 	object-fit: cover;
-	border-radius: 10px 10px 0 0;
+	border-radius: 10px;
 }
 
+.masonry-item-menu {
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	font-size: 1.2rem;
+	color: #fff;
+	margin: 0.5rem;
+	border-radius: 100%;
+}
+
+.masonry-item-menu .menu__icon {
+	vertical-align: middle;
+}
 .card__action {
 	display: flex;
 	padding: 1rem 5px;
